--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="err_msg_no_internet_connection">No internet connection</string>
     <string name="err_msg_unexpected_error_occurred">Unexpected error occurred</string>
     <string name="btn_ok">OK</string>
+    <string name="btn_retry">Retry</string>
 </resources>
