implement get user and get repo list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="err_msg_unexpected_error_occurred">Unexpected error occurred</string>
     <string name="btn_ok">OK</string>
     <string name="btn_retry">Retry</string>
+    <string name="text_no_internet_connection">No internet connection</string>
+    <string name="text_no_internet_connection_guide">Check your internet connection, then retry</string>
+    <string name="text_holder_update_time">Update on %1$s</string>
 </resources>
